# PluginUI

./: .gitignore  CMakeLists.txt
src/Common/: BasePage.cpp  BasePage.h  CMakeLists.txt  Common.h  Page.cpp  Page.h  main.cpp
src/PluginApp/: CMakeLists.txt  PluginApp.cpp  PluginApp.h  PluginApp.ui  PluginUI.cpp  PluginUI.h  main.cpp
src/SamplePage/: CMakeLists.txt  SamplePage.cpp  SamplePage.h  SamplePage.ui  SamplePage_global.h
src/SamplePage2/: CMakeLists.txt  SamplePage2.cpp  SamplePage2.h  SamplePage2.ui  SamplePage2_global.h
